Already Working JSON parser with NO UI.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">BusLocate</string>
+    <string name="test_message">Well I did something</string>
+    <string name="error_message">
+        An error has occurred.
+    </string>
+
 </resources>
