--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,5 @@
     <string name="error_message">
         An error has occurred.
     </string>
-
+    <string name="google_maps_key">AIzaSyAjqIoFf0RjmNney3lntX3lPw7Spt5vJQY</string>
 </resources>
